--- a/ejercicio_1y2.html
+++ b/ejercicio_1y2.html
@@ -6,6 +6,6 @@
     <title>Ejercicio 1y2 - Daniela Leon</title>
 </head>
 <body>
-    <script src="./assets/js/1_funcion.js"></script>
+    <script src="./assets/js/1_2_funcion.js"></script>
 </body>
 </html>
