--- a/pintar.html
+++ b/pintar.html
@@ -8,6 +8,6 @@
 <body>
     <div id="ele1">HOLA HOLA HOLA</div>
 
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script_pintar.js"></script>
 </body>
 </html>
